# gauntlet-ai-showcase

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  pyproject.toml.backup  service-account.example.json
backend/_agent_docs/: google-genai-sdk.md  python-rules.md  workflow_example_palmer.md
backend/_docs/: python-rules.md
backend/db/: README.md  schema.sql
backend/scripts/: README.md  start_server.py
backend/src/backend_app/api/: fastapi_builders_routes.py  fastapi_server.py
backend/src/backend_app/models/: assemblyai_models.py  audio_chunker_models.py  gcs_models.py  workflow_card_models.py
backend/src/backend_app/services/: ai_workflow_examples.py  assemblyai_diarizer.py  audio_chunk_planner.py  audio_chunker.py  chunk_processor.py  chunk_transcript_merger.py  chunked_diarization.py  ffmpeg_audio_splitter.py  full_transcript_orchestrator.py  (+11 more)
backend/tests/: HOW-TO-RUN-TESTS.md
backend/tests/downloads/: README.md
backend/tests/models/: test_workflow_card_models.py
backend/tests/services/: test_all_workflow_categories.py  test_assemblyai_diarizer_integration.py  test_audio_chunker.py  test_chunked_diarization.py  test_ffmpeg_audio_splitter.py  test_gcs_integration.py  test_gcs_storage.py  test_gemini_diarization.py  test_langextract_proof_of_concept.py  test_langextract_workflow_extractor.py  test_supabase_builder_writer.py  test_supabase_storage.py  test_transcript_functions.py  test_transcript_generation_only.py  test_transcript_pipeline.py  test_youtube_downloader.py  test_youtube_gcs_integration.py
(+56 files in other folders)
